# drinfeld_modular_forms

./: .gitignore  AlexPetrov-Original-code-Drinfeldmodularforms-Sage.sage  AlexPetrov-code-Drinfeldmodularforms-Sage.sage  Code-DrinfeldModularForms.sage  LICENSE  Makefile  README.md  drinfeld-modules.sage  notebook_calc.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: Makefile  carlitz_module.rst  conf.py  drinfeld_modules.rst  index.rst
docs/doctrees/: background.doctree  carlitz_module.doctree  drinfeld_modules.doctree  element.doctree  environment.pickle  expansions.doctree  goss_polynomials.doctree  index.doctree  ring.doctree
docs/html/: .buildinfo  background.html  carlitz_module.html  drinfeld_modules.html  element.html  expansions.html  genindex.html  goss_polynomials.html  index.html  objects.inv  py-modindex.html  ring.html  search.html  searchindex.js
docs/source/: additive_polynomials.rst  conf.py  drinfeld_modules.rst  index.rst
docs/src/: background.rst  conf.py  drinfeld_modules.rst  element.rst  index.rst  ring.rst
drinfeld_modular_forms/: __init__.py  all.py  carlitz_module.py  drinfeld_modules.py  element.py  expansions.py  goss_polynomials.py  ring.py
drinfeld_modules/: __init__.py  additive_polynomials.py  all.py  carlitz_module.py  defaults.py  drinfeld_modules.py  element.py  expansions.py  ring.py
petrov/: AlexPetrov-original-code-drinfeld-modular-forms.sage  AlexPetrov-updated-code-drinfeld-modularforms.sage
src/docs/: background.rst  conf.py  drinfeld_modules.rst  goss_polynomials.rst  index.rst
(+32 files in other folders)
