[metadata]
name = drinfeld-modular-forms
version = 1
author = David Ayotte
author_email = davidayotte94@outlook.com
description = SageMath implementation of Drinfeld modular forms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DavidAyotte/drinfeld_modular_forms
license = GPLv2+
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = drinfeld_modular_forms
python_requires = >= 3
install_requires =
